Sneak in grid alignment fix

--- a/components/vf-summary/vf-summary.scss
+++ b/components/vf-summary/vf-summary.scss
@@ -1,6 +1,7 @@
 // vf-summary
 .vf-summary {
   display: grid;
+  align-self: start;
   grid-column-gap: 16px;
   margin-bottom: 16px;
 }
